--- a/adminpage.html
+++ b/adminpage.html
@@ -257,7 +257,7 @@
          		{
 					msg2.fadeOut(500).hide();
 					$.each(data, function(key, value) {
-						$("#tblBody").append('<tr><td>'+value['userid']+'</td><td>'+value['username']+'</td><td>'+value['usertype']+'</td><td><button class=\'btn btn-success\' data-toggle="modal" data-target="#editModal"><span class="glyphicon glyphicon-pencil smallglyph"></button><button class=\'btn btn-danger\' data-toggle="modal" data-target="#alertModal"><span class="glyphicon glyphicon-remove smallglyph"></button></td></tr>');					
+						$("#tblBody").append('<tr><td>'+value['userid']+'</td><td>'+value['username']+'</td><td>'+value['usertype']+'</td><td>'+value['lastname']+'</td><td>'+value['firstname']+'</td><td><button class=\'btn btn-success\' data-toggle="modal" data-target="#editModal"><span class="glyphicon glyphicon-pencil smallglyph"></button><button class=\'btn btn-danger\' data-toggle="modal" data-target="#alertModal"><span class="glyphicon glyphicon-remove smallglyph"></button></td></tr>');					
 					});	
 					$('#example').dataTable();
 					var table = $('#example').DataTable();
@@ -287,6 +287,8 @@
 				
 				var inpUser = $('#txtEmail');
 				var inpPass = $('#txtPassword');
+				var inpLast = $('#txtLastName');
+				var inpFirst = $('#txtFirstName');
 				
 				$('#btnSubmit').click(function(){
 					if(inpUser.val()=="")
@@ -297,6 +299,16 @@
 					else if(inpPass.val()=="")
 					{
 						msg.html('<span class="glyphicon glyphicon-warning-sign smallglyph"></span> Password is required.');
+						msg.fadeIn(500).show();
+					}
+					else if(inpLast.val()=="")
+					{
+						msg.html('<span class="glyphicon glyphicon-warning-sign smallglyph"></span> Last name is required.');
+						msg.fadeIn(500).show();
+					}
+					else if(inpFirst.val()=="")
+					{
+						msg.html('<span class="glyphicon glyphicon-warning-sign smallglyph"></span> First name is required.');
 						msg.fadeIn(500).show();
 					}
 					else{
@@ -420,6 +432,8 @@
 												<th>Id</th>
 												<th>Email</th>
 												<th>Usertype</th>
+												<th>Last Name</th>
+												<th>First Name</th>
 												<th>Action</th>
 											</tr>
 										</thead>
@@ -464,6 +478,18 @@
 											<td><label for="password">Password: </label></td>
 											<td>
 												<input type="password" id="txtPassword" name="txtPassword" class="form-control" placeholder="Password">
+											</td>
+										</tr>
+										<tr>
+											<td><label for="lastname">Last name: </label></td>
+											<td>
+												<input type="lastname" id="txtLastName" name="txtLastName" class="form-control" placeholder="Last name">
+											</td>
+										</tr>
+										<tr>
+											<td><label for="firstname">First name: </label></td>
+											<td>
+												<input type="firstname" id="txtFirstName" name="txtFirstName" class="form-control" placeholder="First name">
 											</td>
 										</tr>
 										<tr>
