--- a/take-attendance.html
+++ b/take-attendance.html
@@ -260,6 +260,24 @@
 		<script>
 		var x;
 			$(document).ready(function(){
+				if(localStorage.getItem("user")!==null)
+				{
+					if(localStorage.getItem("user")=='staff')
+					{
+					
+					}
+					else
+					{
+						alert('Session has expired. Please log in first.');
+						window.location = "login.html";
+					}
+				}
+				else
+				{	
+					alert('Session has expired. Please log in first.');
+					window.location = "login.html";
+				} 
+			
 				var d = new Date();
 				var month = d.getMonth()+1;
 				var day = d.getDate();
