--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,7 @@
   <body>
 		<div id="mainpage">
 			<div class="container" id="bannerheader">
-				<img src="images/logoccs.png" class="img-responsive" id="imglogo"/>
+				<img src="images/logo.png" class="img-responsive" id="imglogo"/>
 			</div>
 			<p class="alert alert-info text-center" id="alertMessage">Welcome, <span id="userHere"></span>!</p>
 			<div class="container" id="divMenu">
