--- a/manage-class.html
+++ b/manage-class.html
@@ -441,7 +441,7 @@
 	<body>
 			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<div class="container icon-menu" id="banner">		
-						<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
+						<span class="glyphicon glyphicon-th-list menu-glyph"></span><img src="images/logo.png" style="margin-left: auto; margin-right: auto; display: block; width: 50px; margin-top: -40px;" />
 					<div class="menu">
 						<!-- Menu -->
 						<ul>
