--- a/generate-report.html
+++ b/generate-report.html
@@ -304,9 +304,11 @@
 				});
 				
 				$('#logout').click(function(){
-				localStorage.removeItem('user');
 					localStorage.removeItem('userlog');
-					location.href="login.html";
+					localStorage.removeItem('uid');
+					event.preventDefault();
+					newLocation = 'login.html';
+					$('body').fadeOut(500, newpage);
 				});
 				
 				var query="";
